testing/tests/ui/macro.stderr
error: macro "thrice" expected 1 argument, found 2
 --> InvalidNumberOfArgs.html:5:2
       "- call thrice(2, 3) -%}"
 --> tests/ui/macro.rs:4:21
  |
4 |   #[template(source = "{%- macro thrice(param) -%}
  |  _____________________^
5 | | {{ param }}
6 | | {%- endmacro -%}
7 | |
8 | | {%- call thrice(2, 3) -%}", ext = "html")]
  | |__________________________^

error: macro "thrice" expected 2 arguments, found 0
 --> InvalidNumberOfArgs2.html:5:2
       "- call thrice() -%}"
  --> tests/ui/macro.rs:12:21
   |
12 |   #[template(source = "{%- macro thrice(param, param2) -%}
   |  _____________________^
13 | | {{ param }} {{ param2 }}
14 | | {%- endmacro -%}
15 | |
16 | | {%- call thrice() -%}", ext = "html")]
   | |______________________^

error: macro "thrice" expected 0 arguments, found 2
 --> InvalidNumberOfArgs3.html:4:2
       "- call thrice(1, 2) -%}"
  --> tests/ui/macro.rs:20:21
   |
20 |   #[template(source = "{%- macro thrice() -%}
   |  _____________________^
21 | | {%- endmacro -%}
22 | |
23 | | {%- call thrice(1, 2) -%}", ext = "html")]
   | |__________________________^

error: expected `)` to close macro argument list
 --> <source attribute>:1:17
       "%}{% endmacro %}"
  --> tests/ui/macro.rs:27:21
   |
27 | #[template(source = "{% macro thrice( %}{% endmacro %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `)` to close macro argument list
 --> <source attribute>:1:24
       "%}{% endmacro %}"
  --> tests/ui/macro.rs:31:21
   |
31 | #[template(source = "{% macro thrice(a, b, c %}{% endmacro %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `)` to close macro argument list
 --> <source attribute>:1:23
       "= %}{% endmacro %}"
  --> tests/ui/macro.rs:35:21
   |
35 | #[template(source = "{% macro thrice(a, b, c= %}{% endmacro %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `)` to close macro argument list
 --> <source attribute>:1:24
       "= %}{% endmacro %}"
  --> tests/ui/macro.rs:39:21
   |
39 | #[template(source = "{% macro thrice(a, b, c = %}{% endmacro %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
